Created sample app for authentication flow